--- a/src/SampleClient.net451/SampleClient.net451.csproj
+++ b/src/SampleClient.net451/SampleClient.net451.csproj
@@ -34,14 +34,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Nanophone.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Nanophone.Core\bin\Debug\net451\Nanophone.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Nanophone.RegistryHost.ConsulRegistry, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Nanophone.RegistryHost.ConsulRegistry\bin\Debug\net451\Nanophone.RegistryHost.ConsulRegistry.dll</HintPath>
-    </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <HintPath>..\packages\NLog.4.3.4\lib\net45\NLog.dll</HintPath>
       <Private>True</Private>
@@ -65,6 +57,16 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Nanophone.Core\Nanophone.Core.xproj">
+      <Project>{61eebbd3-db6a-4ffb-a358-d3d0482aeda2}</Project>
+      <Name>Nanophone.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Nanophone.RegistryHost.ConsulRegistry\Nanophone.RegistryHost.ConsulRegistry.xproj">
+      <Project>{ea667313-9505-4c96-a0a3-a7e3cdf7b453}</Project>
+      <Name>Nanophone.RegistryHost.ConsulRegistry</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
