--- a/src/SampleService.Nancy.Kestrel/Properties/launchSettings.json
+++ b/src/SampleService.Nancy.Kestrel/Properties/launchSettings.json
@@ -3,15 +3,14 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:13273/",
+      "applicationUrl": "http://localhost:59916/",
       "sslPort": 0
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": false,
-      "launchUrl": "api/values",
+      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -19,7 +18,7 @@
     "SampleService.AspNetCore.Kestrel": {
       "commandName": "Project",
       "launchBrowser": false,
-      "launchUrl": "http://localhost:9030/api/values",
+      "launchUrl": "http://localhost:9060/orders",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
