--- a/src/SampleService.AspNetCore.Kestrel/NLog.config
+++ b/src/SampleService.AspNetCore.Kestrel/NLog.config
@@ -11,7 +11,7 @@
   <rules>
     <logger name="*" minlevel="Trace" writeTo="outputwindow" />
     <logger name="*" minlevel="Trace" writeTo="console" />
-    <!--skip Microsoft logs and so log only own logs-->
+    <!--skip Microsoft logs-->
     <logger name="Microsoft.*" minlevel="Trace" writeTo="blackhole" final="true" />
   </rules>
 </nlog>
