--- a/samples/SampleService.AspNetCore.Kestrel/project.json
+++ b/samples/SampleService.AspNetCore.Kestrel/project.json
@@ -13,6 +13,7 @@
     "Microsoft.Extensions.Logging": "1.0.0",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
     "Nanophone.Core": { "target": "project" },
+    "Nanophone.Fabio": {"target": "project" },
     "Nanophone.RegistryHost.ConsulRegistry": { "target": "project" },
     "Nanophone.RegistryTenant.WebApi": { "target": "project" },
     "NLog.Extensions.Logging": "1.0.0-rtm-alpha2"
