--- a/samples/SampleService.Nancy.Kestrel/project.json
+++ b/samples/SampleService.Nancy.Kestrel/project.json
@@ -17,6 +17,7 @@
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
     "Nancy": "2.0.0-barneyrubble",
     "Nanophone.Core": { "target": "project" },
+    "Nanophone.Fabio": {"target": "project" },
     "Nanophone.RegistryHost.ConsulRegistry": { "target": "project" },
     "Nanophone.RegistryTenant.WebApi": { "target": "project" },
     "NLog.Extensions.Logging": "1.0.0-rtm-alpha2"
