update samples to copy nlog.config to output

--- a/samples/SampleClient/NLog.config
+++ b/samples/SampleClient/NLog.config
@@ -8,7 +8,7 @@
   </targets>
 
   <rules>
-    <logger name="*" minlevel="Info" writeTo="outputwindow" />
-    <logger name="*" minlevel="Info" writeTo="console" />
+    <logger name="*" minlevel="Trace" writeTo="outputwindow" />
+    <logger name="*" minlevel="Trace" writeTo="console" />
   </rules>
 </nlog>
