--- a/samples/SampleService.Nancy.Kestrel/Properties/launchSettings.json
+++ b/samples/SampleService.Nancy.Kestrel/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "SampleService.AspNetCore.Kestrel": {
+    "SampleService.Nancy.Kestrel": {
       "commandName": "Project",
       "launchBrowser": false,
       "launchUrl": "http://localhost:9060/orders",
