--- a/samples/SampleService.Nancy.Kestrel/project.json
+++ b/samples/SampleService.Nancy.Kestrel/project.json
@@ -42,7 +42,8 @@
 
   "buildOptions": {
     "emitEntryPoint": true,
-    "preserveCompilationContext": true
+    "preserveCompilationContext": true,
+    "copyToOutput": { "include": "nlog.config" }
   },
 
   "runtimeOptions": {
