--- a/samples/SampleService.AspNetCore.Kestrel/project.json
+++ b/samples/SampleService.AspNetCore.Kestrel/project.json
@@ -38,7 +38,8 @@
 
   "buildOptions": {
     "emitEntryPoint": true,
-    "preserveCompilationContext": true
+    "preserveCompilationContext": true,
+    "copyToOutput": { "include": "nlog.config" }
   },
 
   "runtimeOptions": {
