--- a/src/Nanophone.Core/project.json
+++ b/src/Nanophone.Core/project.json
@@ -1,6 +1,6 @@
 ﻿{
   "title": "Nanophone.Core",
-  "version": "1.0.0",
+  "version": "1.3.0-alpha",
   "authors": [ "Luk Vermeulen" ],
   "copyright": "Copyright 2016",
   "description": "Nanophone core component",
