--- a/src/Nanophone.Fabio/project.json
+++ b/src/Nanophone.Fabio/project.json
@@ -1,6 +1,6 @@
-{
+﻿{
   "title": "Nanophone.Fabio",
-  "version": "1.0.0",
+  "version": "1.3.0-alpha",
   "authors": [ "Luk Vermeulen" ],
   "copyright": "Copyright 2016",
   "description": "Nanophone extension for eBay fabio",
