--- a/src/Nanophone.RegistryHost.ConsulRegistry/project.json
+++ b/src/Nanophone.RegistryHost.ConsulRegistry/project.json
@@ -1,6 +1,6 @@
 ﻿{
   "title": "Nanophone.RegistryHost.ConsulRegistry",
-  "version": "1.0.0",
+  "version": "1.3.0-alpha",
   "authors": [ "Luk Vermeulen" ],
   "copyright": "Copyright 2016",
   "description": "Nanophone Consul registry host",
