ignore compiler warning CS0162 (unreachable code) in samples

--- a/samples/SampleClient/project.json
+++ b/samples/SampleClient/project.json
@@ -2,7 +2,8 @@
   "version": "1.0.0-*",
   "buildOptions": {
     "emitEntryPoint": true,
-    "copyToOutput": { "include": "nlog.config" }
+    "copyToOutput": { "include": "nlog.config" },
+    "nowarn": [ "CS0162" ]
   },
 
   "dependencies": {
