--- a/src/Nanophone.RegistryHost.InMemoryRegistry/project.json
+++ b/src/Nanophone.RegistryHost.InMemoryRegistry/project.json
@@ -1,6 +1,6 @@
 ﻿{
-  "title": "Nanophone.RegistryHost.Test",
-  "version": "1.3.0-alpha",
+  "title": "Nanophone.RegistryHost.InMemoryRegistry",
+  "version": "1.3.1-alpha",
   "authors": [ "Luk Vermeulen" ],
   "copyright": "Copyright 2016",
   "description": "Nanophone test registry host",
