Revert "add IResolveServicesCatalog"
This reverts commit 576290de90a587610d1e2a900805b8f6a0b38a60.

--- a/samples/SampleService.Nancy.Kestrel/project.json
+++ b/samples/SampleService.Nancy.Kestrel/project.json
@@ -19,7 +19,7 @@
     "Nanophone.Core": { "target": "project" },
     "Nanophone.Fabio": {"target": "project" },
     "Nanophone.RegistryHost.ConsulRegistry": { "target": "project" },
-    "Nanophone.RegistryTenant.Nancy": { "target": "project" },
+    "Nanophone.RegistryTenant.WebApi": { "target": "project" },
     "NLog.Extensions.Logging": "1.0.0-rtm-alpha4"
   },
 
