prefix cover filter with $env:

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,7 @@ test_script:
     if ($true)
     {
         Invoke-Expression ".\build\test.ps1"
-        Invoke-Expression ".\build\cover.ps1 $env:COVERALLS_REPO_TOKEN COVER_FILTER"
+        Invoke-Expression ".\build\cover.ps1 $env:COVERALLS_REPO_TOKEN $env:COVER_FILTER"
     }
 artifacts:
 - path: '**\*.nupkg'
