--- a/src/Nanophone.RegistryHost.InMemoryRegistry/project.json
+++ b/src/Nanophone.RegistryHost.InMemoryRegistry/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "title": "Nanophone.RegistryHost.InMemoryRegistry",
   "version": "1.4.0-alpha",
   "authors": [ "Luk Vermeulen" ],
@@ -27,7 +27,8 @@
   },
 
   "dependencies": {
-    "Nanophone.Core": { "target": "project" }
+    "Nanophone.Core": { "target": "project" },
+    "SemVer": "0.6.2"
   },
 
   "frameworks": {
