--- a/samples/SampleService.Nancy.Hosting.Self.Net46/SampleService.Nancy.Hosting.Self.Net46.csproj
+++ b/samples/SampleService.Nancy.Hosting.Self.Net46/SampleService.Nancy.Hosting.Self.Net46.csproj
@@ -33,8 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Consul, Version=0.6.4.8, Culture=neutral, PublicKeyToken=20a6ad9a81df1d95, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Consul.0.6.4.8-alpha2\lib\net451\Consul.dll</HintPath>
+    <Reference Include="Consul, Version=0.7.0.0, Culture=neutral, PublicKeyToken=20a6ad9a81df1d95, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Consul.0.7.0.0-rc1\lib\net451\Consul.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.DotNet.InternalAbstractions, Version=1.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
@@ -53,16 +53,16 @@
       <HintPath>..\..\packages\Nancy.Hosting.Self.2.0.0-barneyrubble\lib\net452\Nancy.Hosting.Self.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Nanophone.Core, Version=1.5.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Nanophone.Core.1.5.0-alpha\lib\net451\Nanophone.Core.dll</HintPath>
+    <Reference Include="Nanophone.Core, Version=1.6.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Nanophone.Core.1.6.1-alpha\lib\net451\Nanophone.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Nanophone.RegistryHost.ConsulRegistry, Version=1.5.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Nanophone.RegistryHost.ConsulRegistry.1.5.0-alpha\lib\net451\Nanophone.RegistryHost.ConsulRegistry.dll</HintPath>
+    <Reference Include="Nanophone.RegistryHost.ConsulRegistry, Version=1.6.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Nanophone.RegistryHost.ConsulRegistry.1.6.1-alpha\lib\net451\Nanophone.RegistryHost.ConsulRegistry.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Nanophone.RegistryTenant.Nancy, Version=1.5.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Nanophone.RegistryTenant.Nancy.1.5.0-alpha\lib\net452\Nanophone.RegistryTenant.Nancy.dll</HintPath>
+    <Reference Include="Nanophone.RegistryTenant.Nancy, Version=1.6.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Nanophone.RegistryTenant.Nancy.1.6.1-alpha\lib\net452\Nanophone.RegistryTenant.Nancy.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
