fix incorrect SemVer dependency

--- a/src/Nanophone.RegistryHost.ConsulRegistry/project.json
+++ b/src/Nanophone.RegistryHost.ConsulRegistry/project.json
@@ -9,7 +9,10 @@
     "define": [ "LIBLOG_PORTABLE" ],
     "optimize": true,
     "outputName": "Nanophone.RegistryHost.ConsulRegistry",
-    "xmlDoc": false
+    "xmlDoc": false,
+    "compile": {
+      "include": "../Nanophone.SemVer/*.cs"
+    }
   },
 
   "packOptions": {
@@ -28,8 +31,7 @@
 
   "dependencies": {
     "Consul": "0.7.0-rc1",
-    "Nanophone.Core": { "target": "project" },
-    "SemVer": "0.6.2"
+    "Nanophone.Core": { "target": "project" }
   },
 
   "frameworks": {
