--- a/samples/SampleService.Nancy.Hosting.Self.Net46/packages.config
+++ b/samples/SampleService.Nancy.Hosting.Self.Net46/packages.config
@@ -3,8 +3,8 @@
   <package id="Consul" version="0.7.0.0-rc1" targetFramework="net461" />
   <package id="Microsoft.DotNet.InternalAbstractions" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyModel" version="1.0.0" targetFramework="net461" />
-  <package id="Nancy" version="2.0.0-barneyrubble" targetFramework="net461" />
-  <package id="Nancy.Hosting.Self" version="2.0.0-barneyrubble" targetFramework="net461" />
+  <package id="Nancy" version="2.0.0-Pre1774" targetFramework="net461" />
+  <package id="Nancy.Hosting.Self" version="2.0.0-Pre1774" targetFramework="net461" />
   <package id="Nanophone.Core" version="1.6.1-alpha" targetFramework="net461" />
   <package id="Nanophone.RegistryHost.ConsulRegistry" version="1.6.1-alpha" targetFramework="net461" />
   <package id="Nanophone.RegistryTenant.Nancy" version="1.6.1-alpha" targetFramework="net461" />
