update to Consul 0.7.0

--- a/samples/SampleService.Nancy.Hosting.Self.Net46/SampleService.Nancy.Hosting.Self.Net46.csproj
+++ b/samples/SampleService.Nancy.Hosting.Self.Net46/SampleService.Nancy.Hosting.Self.Net46.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Consul, Version=0.7.0.0, Culture=neutral, PublicKeyToken=20a6ad9a81df1d95, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Consul.0.7.0.0-rc1\lib\net451\Consul.dll</HintPath>
+      <HintPath>..\..\packages\Consul.0.7.0\lib\net451\Consul.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.DotNet.InternalAbstractions, Version=1.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
