--- a/samples/SampleService.Nancy.Hosting.Self.Net46/packages.config
+++ b/samples/SampleService.Nancy.Hosting.Self.Net46/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Consul" version="0.7.0.0-rc1" targetFramework="net461" />
+  <package id="Consul" version="0.7.0" targetFramework="net461" />
   <package id="Microsoft.DotNet.InternalAbstractions" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyModel" version="1.0.0" targetFramework="net461" />
   <package id="Nancy" version="2.0.0-Pre1774" targetFramework="net461" />
