--- a/samples/SampleService.Nancy.Kestrel/project.json
+++ b/samples/SampleService.Nancy.Kestrel/project.json
@@ -15,7 +15,7 @@
     "Microsoft.Extensions.Configuration.Json": "1.0.0",
     "Microsoft.Extensions.Logging": "1.0.0",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
-    "Nancy": "2.0.0-Pre1774",
+    "Nancy": "2.0.0-barneyrubble",
     "Nanophone.Core": { "target": "project" },
     "Nanophone.Fabio": { "target": "project" },
     "Nanophone.RegistryHost.ConsulRegistry": { "target": "project" },
