move consul config to appsettings.json

--- a/samples/SampleService.AspNetCore.Kestrel/appsettings.json
+++ b/samples/SampleService.AspNetCore.Kestrel/appsettings.json
@@ -1,4 +1,8 @@
 ﻿{
+  "Consul": {
+    "HostName": "localhost",
+    "Port": 8500
+  }
   //"Logging": {
   //  "IncludeScopes": false,
   //  "LogLevel": {
