--- a/samples/SampleService.AspNetCore.Kestrel/NLog.config
+++ b/samples/SampleService.AspNetCore.Kestrel/NLog.config
@@ -9,8 +9,8 @@
   </targets>
 
   <rules>
-    <logger name="*" minlevel="Trace" writeTo="outputwindow" />
-    <logger name="*" minlevel="Trace" writeTo="console" />
+    <logger name="*" minlevel="Debug" writeTo="outputwindow" />
+    <logger name="*" minlevel="Debug" writeTo="console" />
     <!--skip Microsoft logs-->
     <logger name="Microsoft.*" minlevel="Trace" writeTo="blackhole" final="true" />
   </rules>
