--- a/src/Nanophone.RegistryHost.ConsulRegistry/project.json
+++ b/src/Nanophone.RegistryHost.ConsulRegistry/project.json
@@ -9,10 +9,7 @@
     "define": [ "LIBLOG_PORTABLE" ],
     "optimize": true,
     "outputName": "Nanophone.RegistryHost.ConsulRegistry",
-    "xmlDoc": false,
-    "compile": {
-      "include": "../Nanophone.SemVer/*.cs"
-    }
+    "xmlDoc": false
   },
 
   "packOptions": {
@@ -31,7 +28,8 @@
 
   "dependencies": {
     "Consul": "0.7.0.1",
-    "Nanophone.Core": { "target": "project" }
+    "Nanophone.Core": { "target": "project" },
+    "SemanticVersioning": "0.7.4" 
   },
 
   "frameworks": {
