--- a/src/Nanophone.RegistryHost.ConsulRegistry/project.json
+++ b/src/Nanophone.RegistryHost.ConsulRegistry/project.json
@@ -27,15 +27,15 @@
   },
 
   "dependencies": {
-    "Consul": "0.7.0.3",
+    "Consul": "0.7.0.4",
     "Nanophone.Core": { "target": "project" },
-    "SemanticVersioning": "0.7.5"
+    "Newtonsoft.Json": "9.0.2-beta1",
+    "SemanticVersioning": "0.7.6"
   },
 
   "frameworks": {
     "net451": {
       "dependencies": {
-        "Newtonsoft.Json": "9.0.1"
       }
     },
     "netstandard1.6": {
