--- a/samples/SampleService.Nancy.Hosting.Self.Net46/packages.config
+++ b/samples/SampleService.Nancy.Hosting.Self.Net46/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AsyncUsageAnalyzers" version="1.0.0-alpha003" targetFramework="net461" developmentDependency="true" />
-  <package id="Consul" version="0.7.0.4" targetFramework="net461" />
+  <package id="Consul" version="0.7.2.1-alpha1" targetFramework="net461" />
   <package id="Microsoft.DotNet.InternalAbstractions" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyModel" version="1.0.0" targetFramework="net461" />
   <package id="Nancy" version="2.0.0-clinteastwood" targetFramework="net461" />
