--- a/src/Nanophone.RegistryHost.ConsulRegistry/project.json
+++ b/src/Nanophone.RegistryHost.ConsulRegistry/project.json
@@ -27,7 +27,7 @@
   },
 
   "dependencies": {
-    "Consul": "0.7.0.4",
+    "Consul": "0.7.2.1-alpha1",
     "Nanophone.Core": { "target": "project" },
     "Newtonsoft.Json": "9.0.2-beta1",
     "SemanticVersioning": "0.7.6"
