--- a/samples/SampleService.Nancy.Hosting.Self.Net46/packages.config
+++ b/samples/SampleService.Nancy.Hosting.Self.Net46/packages.config
@@ -6,8 +6,12 @@
   <package id="Microsoft.Extensions.DependencyModel" version="1.0.0" targetFramework="net461" />
   <package id="Nancy" version="2.0.0-clinteastwood" targetFramework="net461" />
   <package id="Nancy.Hosting.Self" version="2.0.0-clinteastwood" targetFramework="net461" />
-  <package id="Nanophone.Core" version="1.6.2-alpha" targetFramework="net461" />
-  <package id="Nanophone.RegistryHost.ConsulRegistry" version="1.6.2-alpha" targetFramework="net461" />
-  <package id="Nanophone.RegistryTenant.Nancy" version="1.6.2-alpha" targetFramework="net461" />
+  <package id="Nanophone.Core" version="1.7.0-alpha" targetFramework="net461" />
+  <package id="Nanophone.RegistryHost.ConsulRegistry" version="1.7.0-alpha" targetFramework="net461" />
+  <package id="Nanophone.RegistryTenant.Nancy" version="1.7.0-alpha" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.2-beta1" targetFramework="net461" />
+  <package id="Nito.AsyncEx.Context" version="1.1.0" targetFramework="net461" />
+  <package id="Nito.AsyncEx.Tasks" version="1.1.0" targetFramework="net461" />
+  <package id="Nito.Disposables" version="1.0.0" targetFramework="net461" />
+  <package id="SemanticVersioning" version="0.7.6" targetFramework="net461" />
 </packages>
