--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ test_script:
         .\build\cover.ps1 "$env:COVERALLS_REPO_TOKEN" "$env:COVER_FILTER"
     }
 artifacts:
-- path: '**\*.nupkg'
+- path: '.\artifacts\*.nupkg'
 deploy:
 - provider: NuGet
   api_key:
