--- a/samples/SampleService.Nancy.Hosting.Self.Net46/packages.config
+++ b/samples/SampleService.Nancy.Hosting.Self.Net46/packages.config
@@ -3,8 +3,8 @@
   <package id="AsyncUsageAnalyzers" version="1.0.0-alpha003" targetFramework="net461" developmentDependency="true" />
   <package id="Consul" version="0.7.2.1-alpha1" targetFramework="net461" />
   <package id="Microsoft.DotNet.InternalAbstractions" version="1.0.0" targetFramework="net461" />
-  <package id="Microsoft.DotNet.PlatformAbstractions" version="2.0.0-preview2-25407-01" targetFramework="net461" />
-  <package id="Microsoft.Extensions.DependencyModel" version="2.0.0-preview2-25407-01" targetFramework="net461" />
+  <package id="Microsoft.DotNet.PlatformAbstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyModel" version="2.0.0" targetFramework="net461" />
   <package id="Nancy" version="2.0.0-clinteastwood" targetFramework="net461" />
   <package id="Nancy.Hosting.Self" version="2.0.0-clinteastwood" targetFramework="net461" />
   <package id="Nanophone.Core" version="1.7.0-alpha" targetFramework="net461" />
