--- a/test/Nanophone.AspNetCore.ConfigurationProvider.Tests/Nanophone.AspNetCore.ConfigurationProvider.Tests.csproj
+++ b/test/Nanophone.AspNetCore.ConfigurationProvider.Tests/Nanophone.AspNetCore.ConfigurationProvider.Tests.csproj
@@ -11,6 +11,11 @@
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Update="xunit.runner.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
