--- a/src/Nanophone.AspNetCore.ConfigurationProvider/Nanophone.AspNetCore.ConfigurationProvider.csproj
+++ b/src/Nanophone.AspNetCore.ConfigurationProvider/Nanophone.AspNetCore.ConfigurationProvider.csproj
@@ -23,6 +23,11 @@
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Nanophone.Core\Nanophone.Core.csproj" />
   </ItemGroup>
