--- a/test/Nanophone.Fabio.Tests/Nanophone.Fabio.Tests.csproj
+++ b/test/Nanophone.Fabio.Tests/Nanophone.Fabio.Tests.csproj
@@ -12,6 +12,11 @@
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\src\Nanophone.RegistryHost.InMemoryRegistry\Nanophone.RegistryHost.InMemoryRegistry.csproj" />
     <ProjectReference Include="..\..\src\Nanophone.Fabio\Nanophone.Fabio.csproj" />
